# lib/Model/AttendeeMapper.php
@@ -311,7 +311,7 @@ class AttendeeMapper extends QBMapper {
 			'archived' => (bool)$row['archived'],
 			'important' => (bool)$row['important'],
 			'sensitive' => (bool)$row['sensitive'],
-			'section_id' => $row['section_id'] !== null ? (int)$row['section_id'] : null,
+			'category_ids' => $row['category_ids'],
 			'has_unread_threads' => (bool)$row['has_unread_threads'],
 			'has_unread_thread_mentions' => (bool)$row['has_unread_thread_mentions'],
 			'has_unread_thread_directs' => (bool)$row['has_unread_thread_directs'],
