# lib/Model/SelectHelper.php
@@ -110,7 +110,7 @@ class SelectHelper {
 			$alias . 'archived',
 			$alias . 'important',
 			$alias . 'sensitive',
-			$alias . 'section_id',
+			$alias . 'category_ids',
 			$alias . 'has_unread_threads',
 			$alias . 'has_unread_thread_mentions',
 			$alias . 'has_unread_thread_directs',
